# Bybit-Perpetual-Web-Terminal

./: .env.example  .gitignore  README.md  compose.yaml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  logger.py  main.py
backend/app/api/: routes_account.py  routes_health.py  routes_market.py  routes_positions.py  routes_trade.py  routes_ws.py
backend/app/core/: __init__.py  enums.py  exceptions.py
backend/app/schemas/: market.py  positions.py  trade.py
backend/app/services/: bybit_rest.py  bybit_ws.py  market_cache.py  order_service.py  position_service.py  stream_broker.py  symbol_service.py
backend/tests/: conftest.py  test_health.py  test_market_routes.py  test_positions_routes.py  test_symbols.py  test_trade_routes.py
docs/: api.md  architecture.md  decisions.md  deployment.md  operations.md
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChartPanel.tsx  OrderPanel.tsx  PositionsPanel.tsx  StatusBadge.tsx  TimeframeSelector.tsx
frontend/src/hooks/: useMarketStream.ts  usePositions.ts  useSymbolFromUrl.ts  useWalletBalance.ts
frontend/src/pages/: TerminalPage.tsx
frontend/src/router/: routes.tsx
frontend/src/styles/: app.css
frontend/src/types/: api.ts
infra/nginx/: default.conf
